2009-10-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c (get_selected_object):
	Only returns an object when selection is unique.

	* src/nact/nact-imenubar.c:
	* src/nact/nautilus-actions-config-tool.actions:
	Remove New menu and Preferences items.

	* src/nact/Makefile.am:
	New file src/nact/nact-assistant-export.ui.

	* src/nact/nact-assistant.c:
	* src/nact/nact-assistant.h (get_ui_fname): New virtual function.

	* src/nact/nact-assistant-export.c:
	Define a specific UI filename.

	* src/nact/nautilus-actions-config-tool.ui:
	Make some ids unique inside the file (why not all ??)

2009-08-30 Pierre Wieser <pwieser@trychlos.org>

	* data/nautilus-actions.schemas.in:
	Remove schema for 'Use submenu' preference.
	Add schemas for 'Add About' and 'Alphabetical order' preferences.

	* doc/objects-hierarchy.odg:
	Update doc to show new NAObjectItem and NAActionMenu classes.

	* src/common/na-action-class.h:
	NAAction is now derived from NAObjectItem.

	* src/common/na-action-profile.c:
	Remove PROP_NAPROFILE_NAME and PROP_NAPROFILE_LABEL properties.
	Remove duplicate() virtual function.
	Add new() and get_clipboard_id() virtual functions.

	* src/common/na-action.c:
	Remove PROP_NAACTION_UUID, PROP_NAACTION_LABEL,
	PROP_NAACTION_TOOLTIP and PROP_NAACTION_ICON properties.
	Remove duplicate() and check_edited_status() virtual functions.
	Add new() and get_clipboard_id() virtual functions.

	* src/common/na-action-menu.c:
	* src/common/na-action-menu.h: New files.

	* src/common/na-gconf.c:
	Now watches for preferences directory to manage display mode in
	Nautilus.

	* src/common/na-iduplicable.c:
	* src/common/na-iduplicable.h:
	Replace duplicate() virtual function with copy() and new().
	All interface is now declared with NAIDuplicable instead of NAObject.

	* src/common/na-iio-provider.c:
	* src/common/na-iio-provider.h:
	Temporarily sort read actions.
	Define NA_IIO_PROVIDER_SIGNAL_DISPLAY_ORDER_CHANGED and